<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#163668"
    android:layout_gravity="bottom"
    android:paddingStart="@dimen/sixteen_dp"
    android:paddingLeft="@dimen/sixteen_dp"
    android:paddingTop="62dp"
    tools:ignore="RtlSymmetry">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_icon"
        android:contentDescription="@string/icon_content_description"
        tools:background="@drawable/e"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/sixteen_dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/username"
        style="@style/drawer_linear"
        />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/username"
        style="@style/drawer_linear.child"

        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_drawer_lineartop"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/level"
            style="@style/drawer_linear"

            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/level"
            style="@style/drawer_linear.child"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_drawer_lineartop"
        android:paddingBottom="@dimen/first_child_width"
        >

        <TextView
            style="@style/drawer_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/server_tv"
            style="@style/drawer_linear.child"
            />
    </LinearLayout>
</LinearLayout>