<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".SummonerActivity"
        android:background="@android:color/black"

    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="250dp"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champions"
            android:textColor="@android:color/white"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_height="60dp"
            android:orientation="horizontal"
            android:id="@+id/championsplayed_rv"
            tools:listitem="@layout/champions_played">

        </android.support.v7.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:background="@drawable/bronze"
                android:contentDescription="@string/ranked_solo_emblem"
                android:id="@+id/soloranked_iv"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="16dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Ezreal Guardians"
                    android:textColor="@android:color/white"
                    android:id="@+id/soloranked_tv"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:text="Silver 1"
                    android:textColor="@android:color/white"
                    android:id="@+id/solorankedpoint_tv"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:background="@drawable/silver"
                android:id="@+id/flexranked_iv"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="16dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Rammus Ninja"
                    android:textColor="@android:color/white"
                    android:id="@+id/flexranked_tv"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Silver 1"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/flexrankedpoints_tv"
                    />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:background="@drawable/a"
        android:id="@+id/summoner_backdrop_iv"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/alistar"
        app:civ_border_width="4dp"
        app:civ_border_color="#FF000000"
        android:id="@+id/summoner_currenticon_iv"
        android:layout_marginStart="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="176dp"
            android:textSize="16dp"
            tools:text="Charliesdemon"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:id="@+id/summonername_tv"
            android:layout_marginStart="64dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="64dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/level"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                tools:text="126"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:id="@+id/summonerlevel_tv"
                />
        </LinearLayout>
        </FrameLayout>
    </ScrollView>
